@@ -59,6 +59,7 @@ import se.llbit.chunky.main.BlockTypeListCellRenderer;
 import se.llbit.chunky.main.Chunky;
 import se.llbit.chunky.main.Messages;
 import se.llbit.chunky.renderer.RenderManager;
+import se.llbit.chunky.renderer.ui.Adjuster;
 import se.llbit.chunky.renderer.ui.SceneDirectoryPicker;
 import se.llbit.chunky.resources.MiscImages;
 import se.llbit.chunky.resources.Texture;
@@ -67,6 +68,7 @@ import se.llbit.chunky.world.Block;
 import se.llbit.chunky.world.Chunk;
 import se.llbit.chunky.world.Icon;
 import se.llbit.chunky.world.World;
+import se.llbit.util.ProgramProperties;
 
 /**
  * This is the toolbox that's shown in the left part of the main Chunky GUI.
@@ -101,8 +103,6 @@ public class Controls extends JPanel {
 	private JRadioButton netherBtn;
 	private JRadioButton endBtn;
 
-	private JTextField numThreadsField;
-
 	private WorldSelector worldSelector = null;
 
 	private JTextField xField;
@@ -110,6 +110,22 @@ public class Controls extends JPanel {
 	private JTextField zField;
 
 	private JTabbedPane tabbedPane;
+
+	private final Adjuster numThreads = new Adjuster(
+			"Render threads",
+			"Number of rendering threads",
+			RenderManager.NUM_RENDER_THREADS_MIN,
+			20) {
+		@Override
+		public void valueChanged(double newValue) {
+			ProgramProperties.setNumThreads((int) newValue);
+		}
+
+		@Override
+		public void update() {
+			set(ProgramProperties.getNumThreads());
+		}
+	};
 
 	/**
 	 * @param chunky
@@ -363,22 +379,15 @@ public class Controls extends JPanel {
 
 		JComponent renderPanel = new JPanel();
 
+		numThreads.setClampMax(false);
+		numThreads.update();
+
 		JButton newSceneBtn = new JButton();
 		newSceneBtn.setText("New Scene");
 		newSceneBtn.addActionListener(new ActionListener() {
 			@Override
 			public void actionPerformed(ActionEvent e) {
 				chunky.open3DView();
-			}
-		});
-
-		JLabel numThreadsLbl = new JLabel("Render threads: ");
-		numThreadsField = new JTextField(5);
-		numThreadsField.setText("" + RenderManager.NUM_RENDER_THREADS_DEFAULT);
-		numThreadsField.addActionListener(new ActionListener() {
-			@Override
-			public void actionPerformed(ActionEvent e) {
-				numThreadsField.setText("" + getNumThreads());
 			}
 		});
 
@@ -455,11 +464,7 @@ public class Controls extends JPanel {
 				.addComponent(sep1)
 				.addComponent(newSceneBtn)
 				.addComponent(loadSceneBtn)
-				.addGroup(layout.createSequentialGroup()
-					.addComponent(numThreadsLbl)
-					.addGap(0, 0, Short.MAX_VALUE)
-					.addComponent(numThreadsField, GroupLayout.PREFERRED_SIZE, GroupLayout.PREFERRED_SIZE, GroupLayout.PREFERRED_SIZE)
-				)
+				.addGroup(numThreads.horizontalGroup(layout))
 				.addComponent(sep2)
 				.addComponent(testCLBtn)
 				.addComponent(benchmarkBtn)
@@ -478,9 +483,7 @@ public class Controls extends JPanel {
 			.addPreferredGap(ComponentPlacement.UNRELATED)
 			.addComponent(loadSceneBtn)
 			.addPreferredGap(ComponentPlacement.UNRELATED)
-			.addGroup(layout.createParallelGroup()
-				.addComponent(numThreadsLbl, GroupLayout.PREFERRED_SIZE, GroupLayout.PREFERRED_SIZE, GroupLayout.PREFERRED_SIZE)
-				.addComponent(numThreadsField, GroupLayout.PREFERRED_SIZE, GroupLayout.PREFERRED_SIZE, GroupLayout.PREFERRED_SIZE))
+			.addGroup(numThreads.verticalGroup(layout))
 			.addPreferredGap(ComponentPlacement.UNRELATED)
 			.addComponent(sep2, GroupLayout.PREFERRED_SIZE, GroupLayout.DEFAULT_SIZE, GroupLayout.PREFERRED_SIZE)
 			.addPreferredGap(ComponentPlacement.UNRELATED)
@@ -1046,20 +1049,6 @@ public class Controls extends JPanel {
 		case World.END_DIMENSION:
 			endBtn.setEnabled(haveDimension);
 			break;
-		}
-	}
-
-	/**
-	 * @return Preferred number of rendering threads
-	 */
-	public int getNumThreads() {
-		try {
-			int nThreads = Integer.parseInt(numThreadsField.getText());
-			nThreads = Math.max(RenderManager.NUM_RENDER_THREADS_MIN, nThreads);
-			nThreads = Math.min(RenderManager.NUM_RENDER_THREADS_MAX, nThreads);
-			return nThreads;
-		} catch (NumberFormatException e) {
-			return RenderManager.NUM_RENDER_THREADS_DEFAULT;
 		}
 	}
 
