@@ -2,6 +2,7 @@
     * Fixed some mirrored textures
 	* Fixed autofocus not working
     * Improved rendering speed by using Apache Commons Math library (twirrim)
+    * Chunky now remembers the number number of render threads setting
 
 1.1.11 - 2013-04-28
     * It is now possible to lock the render controls to avoid inadvertent
